--- a/src/BootstrapBlazorApp.Server/BootstrapBlazorApp.Server.csproj
+++ b/src/BootstrapBlazorApp.Server/BootstrapBlazorApp.Server.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="BootstrapBlazor" Version="9.*" />
     <PackageReference Include="BootstrapBlazor.FontAwesome" Version="9.0.*" />
     <PackageReference Include="BootstrapBlazor.Html2Pdf" Version="9.0.*" />
+    <PackageReference Include="BootstrapBlazor.Middleware" Version="9.0.0" />
     <PackageReference Include="BootstrapBlazor.TableExport" Version="9.2.6" />
   </ItemGroup>
 
