--- a/src/BootstrapBlazorApp.Server/BootstrapBlazorApp.Server.csproj
+++ b/src/BootstrapBlazorApp.Server/BootstrapBlazorApp.Server.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="BootstrapBlazor" Version="9.*" />
+    <PackageReference Include="BootstrapBlazor" Version="9.8.0" />
     <PackageReference Include="BootstrapBlazor.FontAwesome" Version="9.0.*" />
     <PackageReference Include="BootstrapBlazor.Html2Pdf" Version="9.0.*" />
     <PackageReference Include="BootstrapBlazor.Middleware" Version="9.0.0" />
